update rules; add 'in fact' rule

--- a/project/explanation_01.ipynb
+++ b/project/explanation_01.ipynb
@@ -301,7 +301,8 @@
     "        )\n",
     "        assert len(nucleus_tokens) > 0\n",
     "        utils.print_if_verbose(\n",
-    "            f\"Satellite's nucleus text: \\n{info.satellite_preparation_result.prepared_text}\", \n",
+    "            \"Satellite's nucleus text: \\n\"\n",
+    "            f\"{info.satellite_preparation_result.prepared_text}\", \n",
     "            verbose\n",
     "        )\n",
     "        sn_tokens = utils.lowercase_and_tokenize(\n",
