--- a/project/explanation_02.ipynb
+++ b/project/explanation_02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,8 @@
       "importing Jupyter notebook from /Users/YK/mt/project/aux/utils.ipynb\n",
       "importing Jupyter notebook from /Users/YK/mt/project/aux/nlp.ipynb\n",
       "importing Jupyter notebook from /Users/YK/mt/project/aux/relation_extraction.ipynb\n",
-      "importing Jupyter notebook from /Users/YK/mt/project/aux/defs.ipynb\n"
+      "importing Jupyter notebook from /Users/YK/mt/project/aux/defs.ipynb\n",
+      "importing Jupyter notebook from preparation.ipynb\n"
      ]
     }
    ],
@@ -44,12 +45,13 @@
     "from aux import utils\n",
     "from aux import nlp\n",
     "from aux import relation_extraction\n",
-    "from aux import defs"
+    "from aux import defs\n",
+    "import preparation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -130,27 +132,36 @@
     "        \n",
     "    def generate_statement(self, text, relation, verbose=False):\n",
     "        assert(relation is not None and relation.type == \"Explanation\")\n",
-    "        info = utils.prepare_extended_info(text, relation, verbose)\n",
+    "        info = preparation.Preprocessor.prepare_extended_info(text, relation, verbose)\n",
     "        if info is None:\n",
     "            utils.print_if_verbose(\"Extended info preparation wasn't successful.\", verbose)\n",
     "            return None\n",
     "\n",
     "        _, ss_segment = info.satellite_info.relation.get_satellite()\n",
     "        if ss_segment is not None:\n",
-    "            if info.nucleus_text[:1] == '\"' or info.nucleus_text[:2] == \"``\":\n",
+    "            if (\n",
+    "                info.nucleus_preparation_result.prepared_text[:1] == '\"' \n",
+    "                    or info.nucleus_preparation_result.prepared_text[:2] == \"``\"\n",
+    "            ):\n",
     "                ss_tokens = utils.tokenize(text[ss_segment.start:ss_segment.end])\n",
     "                satellite_speech_verb = self.speech_verb_finder.find_speech_verb(ss_tokens)\n",
     "                if satellite_speech_verb is not None:\n",
     "                    new_st, sent_no = nlp.move_st(text, ss_segment.start, 5)\n",
-    "                    resolved_subjects = nlp.get_resolved_subjects(text[new_st:ss_segment.end])\n",
+    "                    resolved_subjects = nlp.get_resolved_subjects(\n",
+    "                        text[new_st:ss_segment.end]\n",
+    "                    )\n",
     "                    if len(resolved_subjects) > 0:\n",
     "                        resolved_subject = resolved_subjects[-1]\n",
     "                        if resolved_subject is not None:\n",
     "                            reason = self.reasons[\"SPEECH\"]\n",
     "                            prepared_nucleus_text = utils.remove_trailing_punctuation(\n",
-    "                                utils.uppercase_first_letter(info.nucleus_text)\n",
+    "                                utils.uppercase_first_letter(\n",
+    "                                    info.nucleus_preparation_result.prepared_text\n",
+    "                                )\n",
     "                            )\n",
-    "                            prepared_sn_text = utils.lowercase_first_letter(info.sn_text)\n",
+    "                            prepared_sn_text = utils.lowercase_first_letter(\n",
+    "                                info.satellite_preparation_result.prepared_text\n",
+    "                            )\n",
     "                            statement_text = (\n",
     "                                \"{nucleus}. That is why \"\n",
     "                                \"{subject} {verb} {satellite_nucleus}\".format(\n",
@@ -178,11 +189,13 @@
     "                            ) \n",
     "                    else:\n",
     "                        utils.print_if_verbose(\n",
-    "                            \"Failed to find the subject of the satellite's satellite.\", verbose\n",
+    "                            \"Failed to find the subject of the satellite's satellite.\", \n",
+    "                            verbose\n",
     "                        )\n",
     "                else:\n",
     "                     utils.print_if_verbose(\n",
-    "                         \"Didn't find any speech verbs in the satellite's satellite.\", verbose\n",
+    "                         \"Didn't find any speech verbs in the satellite's satellite.\", \n",
+    "                         verbose\n",
     "                     )  \n",
     "            else:\n",
     "                utils.print_if_verbose(\"Nucleus doesn't start with quotes.\", verbose)\n",
@@ -253,9 +266,14 @@
     "            utils.print_if_verbose(reason.explanation, verbose)\n",
     "            \n",
     "            prepared_nucleus_text = utils.remove_trailing_punctuation(\n",
-    "                utils.uppercase_first_letter(info.nucleus_text)\n",
+    "                utils.uppercase_first_letter(\n",
+    "                    info.nucleus_preparation_result.prepared_text\n",
+    "                )\n",
     "            )\n",
-    "            processed_sn_text = nlp.remove_leading_words(info.sn_text, verbose)\n",
+    "            processed_sn_text = nlp.remove_leading_words(\n",
+    "                info.satellite_preparation_result.prepared_text, \n",
+    "                verbose\n",
+    "            )\n",
     "            prepared_sn_text = utils.lowercase_first_letter(\n",
     "                processed_sn_text if processed_sn_text is not None \n",
     "                    else info.sn_text\n",
@@ -277,40 +295,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "When actors perform , they will paint \" monkey faces \" with colors .  Red is the main color .  Interestingly , they do n't draw eyebrows .  Influence on personality In Chinese culture , the monkey is a symbol of wisdom .  Those who were born in the Year of the Monkey are said to be smart and outgoing .  They are also said to have strong leadership and social skills .  They can solve all kinds of problems in life and be kind to others .  Fun Fact Did you know ?  \n",
+      "( 4 ) Walk with confidence .  It does n't matter how cool your uniform is ( or is not ) .  If you are not confident , nobody will notice how great you look !  \n",
       "Nucleus is on the left.\n",
+      "Nucleus's depth <= 3.\n",
+      "Nucleus is flat.\n",
+      "Will use the whole segment.\n",
       "Satellite's nucleus is on the left.\n",
       "Nuclei proximity is NucleusProximity.NEAR\n",
-      "Satellite doesn't have nested relations or its depth is too small.\n",
-      "Satellite doesn't contain a wh-word or 'how'.\n",
+      "The depth of the satellite's nucleus <= 3.\n",
+      "Satellite's (left) nucleus contains '.', '!', '?', or ';'.\n",
+      "Will use the whole segment.\n",
       "Nucleus doesn't start with quotes.\n",
-      "Nucleus relation type: 'Background'.\n",
-      "Satellite relation type: 'Explanation'.\n",
-      "Common pattern; nucleus has nested relations.\n",
-      "Removing tokens before the first NP: \n",
-      "Red is the main color. \n",
+      "Nucleus relation type: '-'.\n",
+      "Satellite relation type: 'Elaboration'.\n",
+      "Common pattern; nucleus without nested relations.\n",
+      "Removing tokens before the first NP:\n",
+      "-- syntactic parsing result\n",
+      " (ROOT\n",
+      "  (S\n",
+      "    (NP (PRP It))\n",
+      "    (VP (VBZ does) (RB n't)\n",
+      "      (VP (VB matter)\n",
+      "        (SBAR\n",
+      "          (WHADVP (WRB how)\n",
+      "            (ADJP (JJ cool)))\n",
+      "          (S\n",
+      "            (NP (PRP$ your) (NN uniform))\n",
+      "            (VP (VBZ is)\n",
+      "              (PRN (-LRB- -LRB-)\n",
+      "                (CC or)\n",
+      "                (VP (VBZ is) (RB not))\n",
+      "                (-RRB- -RRB-)))))))\n",
+      "    (. .)))\n",
+      "It does n't matter how cool your uniform is ( or is not ).  If you are not confident, nobody will notice how great you look! \n",
       "---> \n",
-      "Red is the main color.\n",
+      "It does n't matter how cool your uniform is -LRB- or is not -RRB-. If you are not confident, nobody will notice how great you look!\n",
       "\n",
       "RESULT:\n",
       "{\n",
-      "  \"statement_text\": \"When actors perform, they will paint \\\" monkey faces \\\" with colors. That is why red is the main color.\",\n",
-      "  \"nucleus\": \"When actors perform, they will paint \\\" monkey faces \\\" with colors\",\n",
-      "  \"satellite_nucleus\": \"red is the main color.\",\n",
-      "  \"left_boundary\": 685,\n",
-      "  \"right_boundary\": 1151,\n",
+      "  \"statement_text\": \"( 4 ) Walk with confidence. That is why it does n't matter how cool your uniform is -LRB- or is not -RRB-. If you are not confident, nobody will notice how great you look!\",\n",
+      "  \"nucleus\": \"( 4 ) Walk with confidence\",\n",
+      "  \"satellite_nucleus\": \"it does n't matter how cool your uniform is -LRB- or is not -RRB-. If you are not confident, nobody will notice how great you look!\",\n",
+      "  \"left_boundary\": 892,\n",
+      "  \"right_boundary\": 1051,\n",
       "  \"nucleus_proximity\": \"near\",\n",
       "  \"rule\": \"explanation_02\",\n",
       "  \"reason\": [\n",
-      "    4,\n",
-      "    \"Common pattern; nucleus has nested relations.\"\n",
+      "    3,\n",
+      "    \"Common pattern; nucleus without nested relations.\"\n",
       "  ]\n",
       "}\n"
      ]
@@ -320,14 +359,14 @@
     "if __name__ == \"__main__\" and \"__file__\" not in globals():\n",
     "    rule = RuleExplanation02()\n",
     "\n",
-    "    with open(\"../parsed/race/train/middle/7051.txt.tree\", \"rt\") as f:\n",
+    "    with open(\"../parsed/race/train/middle/3972.txt.tree\", \"rt\") as f:\n",
     "        tree_text = f.read()\n",
     "\n",
     "    text, relations = relation_extraction.read_relations(\n",
     "        tree_text.replace(\"<s>\", \"\").replace(\"<P>\", \"\")\n",
     "    )\n",
     "\n",
-    "    expl = relations[\"Explanation\"][2]\n",
+    "    expl = relations[\"Explanation\"][0]\n",
     "    print(text[expl.left.start:expl.right.end])\n",
     "\n",
     "    statement = rule.generate_statement(text, expl, verbose=True)\n",
@@ -335,6 +374,15 @@
     "    if statement is not None:\n",
     "        print(json.dumps(statement._asdict(), indent=2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
