--- a/project/explanation_03.ipynb
+++ b/project/explanation_03.ipynb
@@ -35,7 +35,8 @@
       "importing Jupyter notebook from /Users/YK/mt/project/aux/utils.ipynb\n",
       "importing Jupyter notebook from /Users/YK/mt/project/aux/nlp.ipynb\n",
       "importing Jupyter notebook from /Users/YK/mt/project/aux/relation_extraction.ipynb\n",
-      "importing Jupyter notebook from /Users/YK/mt/project/aux/defs.ipynb\n"
+      "importing Jupyter notebook from /Users/YK/mt/project/aux/defs.ipynb\n",
+      "importing Jupyter notebook from preparation.ipynb\n"
      ]
     }
    ],
@@ -44,13 +45,16 @@
     "from aux import utils\n",
     "from aux import nlp\n",
     "from aux import relation_extraction\n",
-    "from aux import defs"
+    "from aux import defs\n",
+    "import preparation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class RuleExplanation03(defs.Rule):\n",
@@ -91,7 +95,7 @@
     "    \n",
     "    def generate_statement(self, text, relation, verbose=False):\n",
     "        assert(relation is not None and relation.type == \"Explanation\")\n",
-    "        info = utils.prepare_extended_info(text, relation, verbose)\n",
+    "        info = preparation.Preprocessor.prepare_extended_info(text, relation, verbose)\n",
     "        if info is None:\n",
     "            utils.print_if_verbose(\"Extended info preparation wasn't successful.\", verbose)\n",
     "            return None\n",
@@ -99,7 +103,9 @@
     "        reason = None\n",
     "        \n",
     "        if utils.contains_any_of(\n",
-    "            utils.remove_extra_space(info.sn_text.lower()),\n",
+    "            utils.remove_extra_space(\n",
+    "                info.satellite_preparation_result.prepared_text.lower()\n",
+    "            ),\n",
     "            [\n",
     "                \"in fact\",\n",
     "                \"as a matter of fact\",\n",
@@ -109,7 +115,9 @@
     "            ]\n",
     "        ):\n",
     "            reason = self.reasons[\"SN_CONTAINS_IN_FACT_ETC\"]\n",
-    "        elif utils.get_first_token(info.sn_text) == \"and\":\n",
+    "        elif utils.get_first_token(\n",
+    "            info.satellite_preparation_result.prepared_text\n",
+    "        ) == \"and\":\n",
     "            reason = self.reasons[\"SN_STARTS_WITH_AND\"]\n",
     "        else:\n",
     "            nucleus_subject = nlp.find_subject(\n",
@@ -175,12 +183,14 @@
     "            utils.print_if_verbose(reason.explanation, verbose)\n",
     "            \n",
     "            prepared_nucleus_text = utils.remove_trailing_punctuation(\n",
-    "                utils.uppercase_first_letter(info.nucleus_text)\n",
+    "                utils.uppercase_first_letter(info.nucleus_preparation_result.prepared_text)\n",
     "            )\n",
-    "            processed_sn_text = nlp.remove_leading_words(info.sn_text, verbose)\n",
+    "            processed_sn_text = nlp.remove_leading_words(\n",
+    "                info.satellite_preparation_result.prepared_text, verbose\n",
+    "            )\n",
     "            prepared_sn_text = utils.lowercase_first_letter(\n",
     "                processed_sn_text if processed_sn_text is not None \n",
-    "                    else info.sn_text\n",
+    "                    else info.satellite_preparation_result.prepared_text\n",
     "            )\n",
     "            statement_text = f\"{prepared_nucleus_text}. Moreover {prepared_sn_text}\"\n",
     "            return defs.Statement(\n",
@@ -199,41 +209,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "He likes the head teacher and decides to go .  Auggie 's first year at school has good times and bad times .  Auggie makes some good friends but other children are unfriendly to him .  At the end of the year , Auggie goes on a school trip and a frightening event there changes things completely .  \n",
+      "I then came to China , a country I had always wanted to visit .  I saw Beijing , of course , and climbed up the Great Wall .  \n",
       "Nucleus is on the left.\n",
+      "Nucleus's depth <= 3.\n",
+      "Parsing result:\n",
+      "(ROOT\n",
+      "  (S\n",
+      "    (NP (PRP I))\n",
+      "    (ADVP (RB then))\n",
+      "    (VP (VBD came)\n",
+      "      (PP (TO to)\n",
+      "        (NP\n",
+      "          (NP (NNP China))\n",
+      "          (, ,)\n",
+      "          (NP\n",
+      "            (NP (DT a) (NN country))\n",
+      "            (SBAR\n",
+      "              (S\n",
+      "                (NP (PRP I))\n",
+      "                (VP (VBD had)\n",
+      "                  (ADVP (RB always))\n",
+      "                  (VP (VBN wanted)\n",
+      "                    (S\n",
+      "                      (VP (TO to)\n",
+      "                        (VP (VB visit))))))))))))\n",
+      "    (. .)))\n",
+      "\n",
+      "Constituencies:\n",
+      "    type  start  end  depth\n",
+      "0    PRP      0    1      3\n",
+      "1     NP      0    1      2\n",
+      "2     RB      1    2      3\n",
+      "3   ADVP      1    2      2\n",
+      "4    VBD      2    3      3\n",
+      "5     TO      3    4      4\n",
+      "6    NNP      4    5      6\n",
+      "7     NP      4    5      5\n",
+      "8      ,      5    6      5\n",
+      "9     DT      6    7      7\n",
+      "10    NN      7    8      7\n",
+      "11    NP      6    8      6\n",
+      "12   PRP      8    9      9\n",
+      "13    NP      8    9      8\n",
+      "14   VBD      9   10      9\n",
+      "15    RB     10   11     10\n",
+      "16  ADVP     10   11      9\n",
+      "17   VBN     11   12     10\n",
+      "18    TO     12   13     12\n",
+      "19    VB     13   14     13\n",
+      "20    VP     13   14     12\n",
+      "21    VP     12   14     11\n",
+      "22     S     12   14     10\n",
+      "23    VP     11   14      9\n",
+      "24    VP      9   14      8\n",
+      "25     S      8   14      7\n",
+      "26  SBAR      8   14      6\n",
+      "27    NP      6   14      5\n",
+      "28    NP      4   14      4\n",
+      "29    PP      3   14      3\n",
+      "30    VP      2   14      2\n",
+      "31     .     14   15      2\n",
+      "32     S      0   15      1\n",
+      "33  ROOT      0   15      0\n",
+      "\n",
+      "Sentence starts at 569.\n",
+      "Boundaries: (0, 8, 8, 15)\n",
+      "Didn't find the left VP.\n",
+      "Nucleus's (left) nucleus doesn't contain '.', '!', '?', or ';' but none of the other two conditions is met.\n",
+      "Will use the whole segment.\n",
       "Satellite's nucleus is on the left.\n",
       "Nuclei proximity is NucleusProximity.NEAR\n",
-      "Satellite doesn't have nested relations or its depth is too small.\n",
-      "Satellite doesn't contain a wh-word or 'how'.\n",
-      "Nucleus' subject is 'His'.\n",
-      "The subject of satellite's nucleus is 'Auggie 's first year at school'.\n",
-      "Nucleus relation type: 'Joint'.\n",
-      "Satellite relation type: 'Joint'.\n",
-      "Common pattern (Joint-Joint).\n",
-      "Removing tokens before the first NP: \n",
-      "Auggie's first year at school has good times and bad times. \n",
+      "The depth of the satellite's nucleus <= 3.\n",
+      "Parsing result:\n",
+      "(ROOT\n",
+      "  (S\n",
+      "    (NP (PRP I))\n",
+      "    (VP\n",
+      "      (VP (VBD saw)\n",
+      "        (NP\n",
+      "          (NP (NNP Beijing))\n",
+      "          (, ,)\n",
+      "          (PP (IN of)\n",
+      "            (NP (NN course)))\n",
+      "          (, ,)))\n",
+      "      (CC and)\n",
+      "      (VP (VBD climbed)\n",
+      "        (PRT (IN up))\n",
+      "        (NP (DT the) (NNP Great) (NNP Wall))))\n",
+      "    (. .)))\n",
+      "\n",
+      "Constituencies:\n",
+      "    type  start  end  depth\n",
+      "0    PRP      0    1      3\n",
+      "1     NP      0    1      2\n",
+      "2    VBD      1    2      4\n",
+      "3    NNP      2    3      6\n",
+      "4     NP      2    3      5\n",
+      "5      ,      3    4      5\n",
+      "6     IN      4    5      6\n",
+      "7     NN      5    6      7\n",
+      "8     NP      5    6      6\n",
+      "9     PP      4    6      5\n",
+      "10     ,      6    7      5\n",
+      "11    NP      2    7      4\n",
+      "12    VP      1    7      3\n",
+      "13    CC      7    8      3\n",
+      "14   VBD      8    9      4\n",
+      "15    IN      9   10      5\n",
+      "16   PRT      9   10      4\n",
+      "17    DT     10   11      5\n",
+      "18   NNP     11   12      5\n",
+      "19   NNP     12   13      5\n",
+      "20    NP     10   13      4\n",
+      "21    VP      8   13      3\n",
+      "22    VP      1   13      2\n",
+      "23     .     13   14      2\n",
+      "24     S      0   14      1\n",
+      "25  ROOT      0   14      0\n",
+      "\n",
+      "Sentence starts at 634.\n",
+      "Boundaries: (0, 7, 7, 14)\n",
+      "Left and right VP boundaries: (1, 7), (8, 13)\n",
+      "Umbrella VPs:\n",
+      "   type  start  end  depth\n",
+      "22   VP      1   13      2\n",
+      "Satellite's (left) nucleus doesn't contain '.', '!', '?', or ';'. Satellite's right subsegment starts 'and' and its verb belongs to the same subject.\n",
+      "Will use only sub-nucleus.\n",
+      "Nucleus' subject is 'I'.\n",
+      "The subject of satellite's nucleus is 'I'.\n",
+      "Nucleus and satellite's nucleus have the same subject.\n",
+      "Removing tokens before the first NP:\n",
+      "-- syntactic parsing result\n",
+      " (ROOT\n",
+      "  (S\n",
+      "    (NP (PRP I))\n",
+      "    (VP (VBD saw)\n",
+      "      (NP\n",
+      "        (NP (NNP Beijing))\n",
+      "        (, ,)\n",
+      "        (PP (IN of)\n",
+      "          (NP (NN course)))\n",
+      "        (, ,)))))\n",
+      "I saw Beijing, of course, \n",
       "---> \n",
-      "Auggie 's first year at school has good times and bad times.\n",
+      "I saw Beijing, of course,\n",
       "\n",
       "RESULT:\n",
       "{\n",
-      "  \"statement_text\": \"He likes the head teacher and decides to go. Moreover auggie 's first year at school has good times and bad times.\",\n",
-      "  \"nucleus\": \"He likes the head teacher and decides to go\",\n",
-      "  \"satellite_nucleus\": \"auggie 's first year at school has good times and bad times.\",\n",
-      "  \"left_boundary\": 843,\n",
-      "  \"right_boundary\": 1141,\n",
+      "  \"statement_text\": \"I then came to China, a country I had always wanted to visit. Moreover I saw Beijing, of course,\",\n",
+      "  \"nucleus\": \"I then came to China, a country I had always wanted to visit\",\n",
+      "  \"satellite_nucleus\": \"I saw Beijing, of course,\",\n",
+      "  \"left_boundary\": 571,\n",
+      "  \"right_boundary\": 697,\n",
       "  \"nucleus_proximity\": \"near\",\n",
       "  \"rule\": \"explanation_03\",\n",
       "  \"reason\": [\n",
-      "    4,\n",
-      "    \"Common pattern (Joint-Joint).\"\n",
+      "    3,\n",
+      "    \"Nucleus and satellite's nucleus have the same subject.\"\n",
       "  ]\n",
       "}\n"
      ]
@@ -243,14 +382,14 @@
     "if __name__ == \"__main__\" and \"__file__\" not in globals():\n",
     "    rule = RuleExplanation03()\n",
     "\n",
-    "    with open(\"../parsed/race/train/middle/7547.txt.tree\", \"rt\") as f:\n",
+    "    with open(\"../parsed/race/train/middle/1251.txt.tree\", \"rt\") as f:\n",
     "        tree_text = f.read()\n",
     "\n",
     "    text, relations = relation_extraction.read_relations(\n",
     "        tree_text.replace(\"<s>\", \"\").replace(\"<P>\", \"\")\n",
     "    )\n",
     "\n",
-    "    expl = relations[\"Explanation\"][1]\n",
+    "    expl = relations[\"Explanation\"][0]\n",
     "    print(text[expl.left.start:expl.right.end])\n",
     "\n",
     "    statement =rule.generate_statement(text, expl, verbose=True)\n",
@@ -258,6 +397,15 @@
     "    if statement is not None:\n",
     "        print(json.dumps(statement._asdict(), indent=2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
