correct satellite=contrast case

--- a/project/explanation_05.ipynb
+++ b/project/explanation_05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -25,21 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "importing Jupyter notebook from /Users/YK/mt/project/aux/utils.ipynb\n",
-      "importing Jupyter notebook from /Users/YK/mt/project/aux/nlp.ipynb\n",
-      "importing Jupyter notebook from /Users/YK/mt/project/aux/relation_extraction.ipynb\n",
-      "importing Jupyter notebook from /Users/YK/mt/project/aux/defs.ipynb\n",
-      "importing Jupyter notebook from preparation.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import import_ipynb\n",
     "from aux import utils\n",
@@ -51,13 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "class RuleExplanation04(defs.Rule):\n",
+    "class RuleExplanation05(defs.Rule):\n",
     "    name = \"explanation_05\"\n",
     "    relation_type = \"Explanation\"\n",
     "    reasons = {\n",
@@ -71,7 +59,7 @@
     "                2,\n",
     "                \"Common pattern (Condition-Explanation).\"\n",
     "            ),\n",
-    "        \"COMMON_PATTERN_-_CONTRAST\": \n",
+    "        \"COMMON_PATTERN_WHATEVER-CONTRAST\": \n",
     "            defs.Reason(\n",
     "                3,\n",
     "                \"Common pattern ( -Contrast).\"\n",
@@ -106,13 +94,14 @@
     "                    and info.sn_relation.type == \"Condition\"\n",
     "            ):\n",
     "                reason = self.reasons[\"COMMON_PATTERN_-_EXPLANATION->CONDITION\"]\n",
+    "        else:\n",
+    "            if (\n",
+    "                info.nucleus_info.relation.type == \"Condition\"\n",
+    "                    and info.satellite_info.relation.type == \"Explanation\"\n",
+    "            ):\n",
+    "                reason = self.reasons[\"COMMON_PATTERN_CONDITION_EXPLANATION\"]\n",
     "            elif info.satellite_info.relation.type == \"Contrast\":\n",
     "                reason = self.reasons[\"COMMON_PATTERN_-_CONTRAST\"]\n",
-    "        elif (\n",
-    "            info.nucleus_info.relation.type == \"Condition\"\n",
-    "                and info.satellite_info.relation.type == \"Explanation\"\n",
-    "        ):\n",
-    "            reason = self.reasons[\"COMMON_PATTERN_CONDITION_EXPLANATION\"]\n",
     "\n",
     "        if reason is not None:\n",
     "            utils.print_if_verbose(reason.explanation, verbose)\n",
@@ -144,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -226,51 +215,14 @@
       "Will use the whole segment.\n",
       "Nucleus relation type: '-'.\n",
       "Satellite relation type: 'Joint'.\n",
-      "Common pattern ( -Joint).\n",
-      "Removing tokens before the first NP:\n",
-      "-- syntactic parsing result\n",
-      " (ROOT\n",
-      "  (S\n",
-      "    (PP (IN In)\n",
-      "      (NP (CD 2004)))\n",
-      "    (, ,)\n",
-      "    (S\n",
-      "      (NP (NNP Typhoon) (NNP Yunna))\n",
-      "      (VP (VBD killed)\n",
-      "        (NP (CD 164) (NNS people))\n",
-      "        (PP (IN in)\n",
-      "          (NP (NNP Zhejiang)))))\n",
-      "    (, ,)\n",
-      "    (CC and)\n",
-      "    (S\n",
-      "      (NP (CD 24) (NNS people))\n",
-      "      (VP (VBD were)\n",
-      "        (ADJP (VBG missing))))\n",
-      "    (. .)))\n",
-      "In 2004, Typhoon Yunna killed 164 people in Zhejiang, and 24 people were missing. \n",
-      "---> \n",
-      "2004, Typhoon Yunna killed 164 people in Zhejiang, and 24 people were missing.\n",
       "\n",
-      "RESULT:\n",
-      "{\n",
-      "  \"statement_text\": \"Typhoons are very dangerous. In fact, 2004, Typhoon Yunna killed 164 people in Zhejiang, and 24 people were missing.\",\n",
-      "  \"nucleus\": \"Typhoons are very dangerous\",\n",
-      "  \"satellite_nucleus\": \"2004, Typhoon Yunna killed 164 people in Zhejiang, and 24 people were missing.\",\n",
-      "  \"left_boundary\": 921,\n",
-      "  \"right_boundary\": 1038,\n",
-      "  \"nucleus_proximity\": \"near\",\n",
-      "  \"rule\": \"explanation_04\",\n",
-      "  \"reason\": [\n",
-      "    3,\n",
-      "    \"Common pattern ( -Joint).\"\n",
-      "  ]\n",
-      "}\n"
+      "RESULT:\n"
      ]
     }
    ],
    "source": [
     "if __name__ == \"__main__\" and \"__file__\" not in globals():\n",
-    "    rule = RuleExplanation04()\n",
+    "    rule = RuleExplanation05()\n",
     "\n",
     "    with open(\"../parsed/race/train/middle/1310.txt.tree\", \"rt\") as f:\n",
     "        tree_text = f.read()\n",
@@ -287,6 +239,15 @@
     "    if statement is not None:\n",
     "        print(json.dumps(statement._asdict(), indent=2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
